# phone-address

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: Dockerfile  logging.conf  main.py  requirements.txt
app/api/v1/: schemas.py
app/api/v1/routes/: api.py  data.py
app/core/: app.py  config.py  exceptions.py  repositories.py  service.py
tests/: conftest.py  service_test.py  utils.py
