[tool.poetry]
name = "phoneaddress"
version = "0.1.0"
description = ""
authors = ["Kozenko Valeriy <Osmiylantan@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
fastapi = "^0.104.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
